update copy, arrow alignment fix attempt

--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -356,12 +356,13 @@ body, html {
   }
   
   li {
-    display: flex;
+    display: grid;
   }
 
   img {
     width: 3vw;
     pointer-events: none;
+    display: block;
   }
 }
 
