--- a/src/css/Mobile.scss
+++ b/src/css/Mobile.scss
@@ -164,10 +164,10 @@ $sidebar: 16vw;
       }
 
       ul {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
+        // display: flex;
+        // flex-direction: column;
+        // justify-content: flex-start;
+        // align-items: flex-start;
 
         li:nth-child(1) { 
           img {
